# MRLabeler

./: .gitignore  CMakeLists.txt  MRLabeler.sln  README.md
AnnoUtil/: AnnoUtil.py  AnnoUtil.pyproj  getfacesinfddb.py
DataGenerator/: CMakeLists.txt  DataGenerator.vcxproj  DataGenerator.vcxproj.filters  datagenerator.cpp
MRLabeler/: ColorRectTracker.cpp  ColorRectTracker.h  MFCLabeler.aps  MFCLabeler.cpp  MFCLabeler.h  MFCLabeler.rc  MFCLabelerDlg.cpp  MFCLabelerDlg.h  MFCLabelerDlgOld.cpp  MRLabeler.vcxproj  MRLabeler.vcxproj.filters  MRLabelerstatic.vcxproj  ReadMe.txt  TipListBox.cpp  TipListBox.h  mrcvutil.h  resource.h  stdafx.cpp
MRLabeler/res/: MFCLabeler.rc2
VOC2YOLOConverter/: CMakeLists.txt  VOC2YOLOConverter.vcxproj  VOC2YOLOConverter.vcxproj.filters  main.cpp
VOCUtil/: AnnotationFile.cpp  DataSetConfig.cpp  DataSetConfig.h
