set(ProjName VOC2YOLOConverter)
project(${ProjName})
#SET(CMAKE_BUILD_TYPE "Debug")  
SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g2 -ggdb")  
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall") 
include_directories(../VOCUtil)
if(WIN32)
	AUX_SOURCE_DIRECTORY(. SRC_LIST)
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
	add_executable(${ProjName} ${SRC_LIST})
else()
	find_package(OpenCV REQUIRED)
	include_directories(${OPENCV_DIRS})
	include_directories(./)
	AUX_SOURCE_DIRECTORY(. SRC_LIST)
	AUX_SOURCE_DIRECTORY(../VOCUtil SRC_UTIL)
	list(APPEND SRC_LIST ${SRC_UTIL})
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
	add_executable(${ProjName} ${SRC_LIST})
	target_link_libraries (${ProjName} ${OpenCV_LIBS})
endif()	